tests/ui/attributes/args-checked.rs
#[inline(always = 5)]
//~^ ERROR malformed
#[inline(always(x, y, z))]
//~^ ERROR malformed
fn main() {

}